add search api endpoint
